update: tidied up