@@ -3,19 +3,16 @@ package mercury.procurems.application.internal.queryservices;
 import mercury.procurems.interfaces.rest.SupplierController;
 import mercury.procurems.interfaces.rest.transform.SupplierModelAssembler;
 
-import java.io.FileNotFoundException;
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.HttpStatusCodeException;
 
 import mercury.procurems.domain.aggregate.Supplier;
 import mercury.procurems.infrastructure.repository.SupplierRepository;
@@ -27,34 +24,48 @@ public class SupplierProcurementQueryService {
     private final SupplierRepository supplierRepository;
     private SupplierModelAssembler assembler;
 
-    
-
     public SupplierProcurementQueryService(SupplierRepository supplierRepository, SupplierModelAssembler assembler) {
         this.supplierRepository = supplierRepository;
         this.assembler = assembler;
     }
 
+    // **********************************************************************
+    //                         GET ALL SUPPLIERS
+    // **********************************************************************
     public CollectionModel<EntityModel<Supplier>> all() {
-    
-      List<EntityModel<Supplier>> suppliers = (List<EntityModel<Supplier>>) supplierRepository.findAll().stream()
-          .map(assembler::toModel)
-          .collect(Collectors.toList());
-    
-      return CollectionModel.of(suppliers, linkTo(methodOn(SupplierController.class).all()).withSelfRel());
+
+        List<EntityModel<Supplier>> suppliers = (List<EntityModel<Supplier>>) supplierRepository.findAll().stream()
+                .map(assembler::toModel)
+                .collect(Collectors.toList());
+
+        return CollectionModel.of(suppliers, linkTo(methodOn(SupplierController.class).all()).withSelfRel());
     }
 
-    public Supplier findById(Long id){
+    // **********************************************************************
+    //                         GET ONE SUPPLIERS
+    // **********************************************************************
+    public Supplier findById(Long id) {
         return supplierRepository.findById(id)
-        .orElseThrow(() -> new SupplierNotFoundException(id));
+                .orElseThrow(() -> new SupplierNotFoundException(id));
     }
 
-    public URI findByName(String name){
+    // **********************************************************************
+    //                         GET ALL SUPPLIERS
+    // **********************************************************************
+    public URI findByName(String name) {
         List<Supplier> suppliers = supplierRepository.findAll();
         Supplier tmpSupplier = new Supplier();
-        String searchName = URLDecoder.decode(name);//, StandardCharsets.UTF_8);
+
+        String searchName = "";
+        try {
+            searchName = URLDecoder.decode(name, "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new AssertionError("UTF-8 is unknown");
+        }
+
         System.out.println(searchName);
-        for (Supplier s : suppliers){
-            if (s.getCompanyName().equals(searchName)){
+        for (Supplier s : suppliers) {
+            if (s.getCompanyName().equals(searchName)) {
                 tmpSupplier = s;
             }
         }
@@ -63,7 +74,7 @@ public class SupplierProcurementQueryService {
         } catch (Exception e) {
             return URI.create("error:supplierMS");
         }
-        
+
     }
 
 }
